--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "list-tools",
   "description": "Vue.js table component with pagination, sorting and filtering options",
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "coverage": "vitest run --coverage",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "NODE_ENV='production' eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "lint:ci": "NODE_ENV='production' eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
     "prettier": "prettier . --write",
     "prettier:ci": "prettier .",
