--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/Applied-Blockchain-Lab/list-tools-Vuejs#readme",
   "dependencies": {
     "buddy.js": "^0.9.3",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.26",
     "sass": "^1.56.1",
     "vue": "^3.2.45",
