--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "coverage": "vitest run --coverage",
-    "lint": "NODE_ENV='production' eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "lint:ci": "NODE_ENV='production' eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint:ci": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
     "prettier": "prettier . --write",
     "prettier:ci": "prettier .",
     "buddy": "buddy -e src/",
@@ -50,7 +50,8 @@
     "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "vite": "^3.2.4",
-    "vitest": "^0.25.3"
+    "vitest": "^0.25.3",
+    "vue-select": "^4.0.0-beta.6"
   },
   "lint-staged": {
     "{src,test,tasks}/**/*.{js,vue}": [
