--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
   "lint-staged": {
     "{src,test,tasks}/**/*.{js,vue}": [
       "npm run prettier",
-      "npm run lint"
+      "npm run lint",
+      "npm run buddy"
     ]
   }
 }
