--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "jsdom": "^20.0.3",
     "lint-staged": "^13.1.0",
     "lodash": "^4.17.21",
+    "lodash.filter": "^4.6.0",
+    "lodash.partial": "^4.2.1",
     "prettier": "^2.7.1",
     "vite": "^3.2.4",
     "vitest": "^0.25.3",
